# mlstudy

./: .env.example  .gitignore  README.md  environment.yaml  pyproject.toml
.claude/: settings.local.json
configs/: .gitkeep
notebooks/: .gitkeep
scripts/: .gitkeep
scripts/data/: make_supervised_from_simulated.py  simulate_data.py
scripts/deploy/: export_artifact.py  realtime_simulate.py
scripts/ml/: train.py  train_multi_horizon.py  train_on_prepared.py
scripts/research/: compare_group_distributions.py
scripts/trading/: plot_portfolio_results.py  read_sweep_results.py  run_fly_backtest.py  run_fly_backtest_intraday.py  run_fly_backtest_momentum.py  run_mr_backtest.py  run_mr_multi_ref_partition.py  run_mr_multi_ref_sweep.py  run_mr_sweep_backtest.py  run_portfolio_backtest.py  run_portfolio_sweep.py  sweep_fly_backtests.py
src/mlstudy/: __init__.py
src/mlstudy/core/data/: __init__.py  dataset.py  panel.py  session.py
src/mlstudy/core/features/: __init__.py  base.py  pipeline.py  registry.py
src/mlstudy/core/preprocess/: __init__.py  pipeline.py
src/mlstudy/core/splitters/: __init__.py  time.py  walk_forward.py
src/mlstudy/deploy/export/: __init__.py  artifacts.py
src/mlstudy/ml/train/: metrics.py  (+3 more)
tests/core/data/: test_dataset.py  test_session.py
tests/core/features/: test_features.py
tests/core/splitters/: test_splitters.py
tests/ml/targets/: test_multi_horizon.py
tests/ml/train/: test_train_on_prepared.py  test_train_smoke.py
tests/mlstudy/deploy/: test_artifacts.py  test_inference.py
tests/research/simulate/: test_simulate.py
(+298 files in other folders)
